client/src/theme/Components/backend/_vertical-list.scss
// Nav wrapping totals and a <ul>
.vertical-list-primary {
  padding-top: 49px;
  padding-bottom: 36px;

  &.flush {
    padding-top: 0;

    &.top-border {
      border-top: 1px solid $neutral80;
    }
  }

  .drawer-primary & {
    padding-top: 20px;
    padding-bottom: 0;

    a, .fake-link {
      padding: 10px 0 17px;
    }
  }

  .simple-list {
    ul {
      margin-top: 0;
    }
  }

  .buttons-icon-horizontal {
    margin: 0;

    @include respond($break95) {
      display: flex;
      flex-wrap: nowrap;
    }

    + .simple-list {
      margin-top: 1em;
    }

    &.flush-top {
      margin: 0 0 25px;
    }

    .button-icon-secondary {
      width: 100%;
      margin: 0;

      + .button-icon-secondary {
        margin-top: 15px;

        @include respond($break95) {
          margin-top: 0;
          margin-left: 25px;
        }
      }
    }

    .narrow {
      @include respond($break95) {
        min-width: 33.333%;
        max-width: 33.333%;
      }
    }
  }

  &.tile-list ul {
    display: flex;
    flex-wrap: wrap;
    margin-top: 17px;
    margin-bottom: -28px;

    @include respond($break60) {
      margin-left: -40px;

      li {
        flex-basis: 100%;
        max-width: 100%;
      }
    }

    @include respond($break65) {
      margin-left: -24px;
    }

    @include respond($break95) {
      li {
        flex-basis: 50%;
        max-width: 50%;
      }
    }

    @include respond($break110) {
      margin-left: -40px;
    }
  }

  ul {
    @include listUnstyled;
    margin-top: 1em;

    .backend-dashboard & {
      margin-top: 0;
    }

    li:first-child {
      a {
        .backend-dashboard & {
          padding-top: 0;
        }
      }
    }

    li {
      display: flex;
      align-items: center;
      border-bottom: 1px solid $neutral80;
      transition: background-color $duration ease-out,
        box-shadow $duration ease-out;

      &.active {
        background-color: $neutral100;
        border-color: $neutral100;
        box-shadow: -21px 0 0 1px $neutral100, 21px 0 0 1px $neutral100;

        a, .fake-link {
          color: $accentPrimary;
        }
      }

      &.user-list-item {
        .label {
          @include respond($break70, max) {
            display: none;
          }
        }
      }
    }

    // Use .list-item on li if the items don't link
    a, .fake-link {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      width: 100%;
      padding: 20px 0;
      color: $neutral30;
      text-decoration: none;
      transition: color $duration ease-out;

      @include respond($break70) {
        flex-direction: row;
      }

      figure svg {
        fill: $neutral30;
      }

      &:hover, &:focus {
        outline: 0;

        figure img {
          background-color: $accentPrimary;
          border-color: $accentPrimary;
        }

        figure svg, figure svg .highlight {
          fill: $accentPrimary;
        }

        .project-title, .subtitle, .project-makers {
          color: $neutral20;
        }

        .name, .label {
          color: $accentPrimary;

          &.secondary {
            color: $sp40Tertiary;
          }
        }
      }
    }

    .content {
      display: flex;
      flex-grow: 1;
    }

    .figure-wrapper,
    figure {
      + .meta {
        padding-left: 15px;
      }
    }

    figure {
      &.cover {
        min-width: 50px;
        max-width: 50px;

        img {
          border: 1px solid transparent;
          transition: border $duration $timing,
            background-color $duration $timing;
        }

        svg {
          width: 50px;
          max-height: 50px;
          transition: fill $duration $timing;
        }
      }

      &.avatar {
        .image {
          width: 30px;
          height: 30px;
          background-repeat: no-repeat;
          background-position: 50% 50%;
          background-size: cover;
          border-radius: 100%;
        }

        .no-image {
          @include buttonAvatar(30);
        }
      }

      .manicon-twitter {
        padding-right: 12px;
        font-size: 22px;

        &::before {
          vertical-align: bottom;
        }
      }

      img, svg {
        width: 50px;
        height: auto;
      }
    }

    .meta {
      display: flex;
      flex-flow: column;
      flex-grow: 1;
      width: 100%;
      padding-right: 20px;
      vertical-align: top;
    }

    .title {
      display: flex;
      flex-flow: column;
      flex-grow: 1;
      padding-right: 20px;
      vertical-align: top;
    }

    .label {
      @include utilityPrimary;
      display: table-cell;
      padding-top: 15px;
      font-size: 14px;
      color: $neutral75;
      white-space: nowrap;
      vertical-align: top;
      transition: color $duration $timing;

      &:empty {
        display: none;
      }

      @include respond($break70) {
        padding-top: 3px;
        padding-left: 19px;
      }

      @include respond($break80) {
        padding-top: 7px;
      }

      span + span {
        padding-left: 19px;
      }
    }

    .specifier {
      display: inline-block;
      padding-right: 19px;
      color: $accentPrimary;

      &.dull {
        color: $neutral75;
      }
    }

    .name {
      @include templateHead;
      max-width: 100%;
      margin: 0;
      font-size: 16px;
      font-weight: $bold;
      letter-spacing: 0.015em;
      transition: color $duration $timing;

      @include respond($break80) {
        font-size: 18px;
      }

      &.large {
        font-size: 18px;

        @include respond($break80) {
          font-size: 22px;
        }
      }

      .truncate {
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      .title-text {
        margin-right: 9px;
      }

      .title-text, .subtitle {
        white-space: normal;
      }

      .block-label {
        @include blockLabelRound;
        position: relative;
        display: inline-block;
        padding: 0.333em 5px;
        margin-top: -3px;
        font-size: 9px;
        color: $neutral85;
        vertical-align: middle;
        background-color: $neutral30;
      }
    }

    .subtitle {
      @include subtitlePrimary;
      display: block;
      padding-top: 0.389em;
      color: $neutral50;
      transition: color $duration $timing;

      &:empty {
        display: none;
      }
    }


    .relations-list {
      @include templateCopy;
      padding-top: 6px;
      font-size: 15px;
      color: $neutral50;
      transition: color $duration $timing;

      @include respond($break80) {
        font-size: 17px;
      }
    }

    // Optional items
    .checkbox-primary {
      margin-right: 18px;

      .toggle-indicator {
        width: 15px;
        height: 15px;
        padding: 3px 2px;
      }

      .manicon-check {
        font-size: 8px;
      }
    }

    .list-item {
      position: relative;
      width: 100%;

      @include respond($break60) {
        width: 100%;
        min-height: 150px;
        padding-left: 40px;
        margin-bottom: 28px;
        border-bottom: 0;
      }

      @include respond($break95) {
        width: 50%;
      }

      .utility {
        position: absolute;
        right: 12px;
        bottom: 8px;

        @include respond($break60) {
          font-size: 1.2em;
        }

        .manicon-trashcan {
          color: $sp40Tertiary;
        }

        &:hover {
          cursor: pointer;
        }
      }

      &--tile {
        .utility {
          right: 18px;
          bottom: 18px;
        }
      }
    }
  }
}

